<resources>
    <string name="app_name">Mobile-SquareRootApp</string>
    <string name="equacao_segundoGrau">Equação do Segundo Grau</string>
    <string name="a_inicial">Informe o valor de A</string>
    <string name="b_inicial">Informe o valor de B</string>
    <string name="c_inicial">Informe o valor de C</string>
    <string name="delta">Valor do delta:</string>
    <string name="raiz_um">Há apenas uma raiz real! </string>
    <string name="raiz_dois">Há duas raizes reais! </string>
    <string name="zero_raizes">Não há raizes reais nessa equação!</string>
    <string name="equacao_primeiroGrau">Equação Linear encontrada! </string>
    <string name="noSolution">Sem solução!</string>
    <string name="button_calc">Calcular</string>
</resources>